--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,8 @@
 <body>
     <div class="login-container">
         <form action="/login" method="POST">
+            {{ csrf_token() }}
+
             <h2>
                 Login
             </h2>
