--- a/templates/login.html
+++ b/templates/login.html
@@ -16,8 +16,6 @@
 <body>
     <div class="login-container">
         <form action="/login" method="POST">
-            {{ csrf_token() }}
-
             <h2>
                 Login
             </h2>
@@ -41,6 +39,8 @@
             <button type="submit">
                 Login
             </button>
+
+            <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />  
         </form>
     </div>
 </body>
